# processing_cvsa

./: CMakeLists.txt  README.md  package.xml
cfg/: qdaCfg.yaml  qdaCfg_ok.yaml
include/processing_cvsa/: CVSA.hpp  Test_CVSA.hpp  utils.hpp
launchers/: cvsa.launch
msg/: eeg_power.msg  features.msg
src/: CVSA.cpp  features_rosneuro.csv  processing_node.cpp
test/: Test_CVSA.cpp  avg.csv  log.csv  prova.asv  prova.m  prova_processing.m  rawdata.csv  test.launch  test_CVSA.cpp  test_CVSA_evaluation.launch  test_CVSA_node.cpp  test_CVSA_processing.cpp  test_buffer.csv  test_features.csv  test_filtered_0.csv  test_filtered_1.csv  test_filtered_2.csv  test_filtered_3.csv  test_filtered_4.csv
test/class/: processing.csv  test_CVSA_processing.cpp  test_class_processing.launch
test/node/: logger.cpp  processing.csv  publisher.cpp  test_node_processing.launch
